[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Meteoritos/fontfuture.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Juego/Meteoritos/advertencia.ogg" type="AudioStream" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -0.833252, -540.705 )
b = Vector2( -0.271667, 541.343 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 960.888, 0.174133 )
b = Vector2( -961.762, -0.201538 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 960.174, -0.439026 )
b = Vector2( -961.546, -0.0966797 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -0.202271, -897.726 )
b = Vector2( -0.428711, 901.576 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( -1401.82, 0.668457 )
b = Vector2( 1401.17, 0.197693 )

[sub_resource type="DynamicFont" id=6]
size = 70
outline_size = 1
outline_color = Color( 0.0862745, 0.0784314, 0.0784314, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.713726, 0.658824, 0.658824, 1 ), Color( 0.713726, 0.658824, 0.658824, 0 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AdvertenciaSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": null
} ],
"times": PoolRealArray( 0, 5 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AdvertenciaSFX:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SpawnTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SectorMeteoritos" type="Node2D"]
script = ExtResource( 2 )

[node name="BordesNavePlayer" type="Node2D" parent="."]

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
position = Vector2( -960, 0 )
shape = SubResource( 1 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
position = Vector2( 960, 0 )
shape = SubResource( 1 )

[node name="BordeSuperior" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeSuperior"]
position = Vector2( 0, -540 )
shape = SubResource( 2 )

[node name="BordeInferior" type="StaticBody2D" parent="BordesNavePlayer"]
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeInferior"]
position = Vector2( 0, 540 )
shape = SubResource( 3 )

[node name="DetectorFueraZona" type="Node2D" parent="."]

[node name="DetectorIzquierda" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorIzquierda"]
position = Vector2( -1400, -3.1748 )
shape = SubResource( 4 )

[node name="DetectorDerecha" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorDerecha"]
position = Vector2( 1400.05, 0 )
shape = SubResource( 4 )

[node name="DetectorSuperior" type="Area2D" parent="DetectorFueraZona"]
position = Vector2( 0, -0.235962 )
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorSuperior"]
position = Vector2( 0, -900 )
shape = SubResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="DetectorInferior" type="Area2D" parent="DetectorFueraZona"]
collision_layer = 0
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraZona/DetectorInferior"]
position = Vector2( 0, 900 )
shape = SubResource( 5 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1180, -3.1748 )
direccion = Vector2( -2, 0 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1180, 360 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1180, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 590, 720 )
direccion = Vector2( -2, -1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -590, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1180, 720 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1180, 360 )
direccion = Vector2( 2, -1 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1173.65, 0 )
direccion = Vector2( 2, 0 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1180, -360 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1180, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -590, -720 )
direccion = Vector2( 2, 1 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 590, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1180, -720 )
direccion = Vector2( -2, 1 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1180, -360 )
direccion = Vector2( -2, 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0.713726, 0.658824, 0.658824, 0.3 )
self_modulate = Color( 0.619608, 0.129412, 0.129412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.77539
margin_top = 3.77551
margin_right = 3.77539
margin_bottom = 3.77551
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Â¡ADVERTENCIA!
LLUVIA DE METEORITOS INMINENTE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdvertenciaSFX" type="AudioStreamPlayer" parent="."]
volume_db = -21.0
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 7 )
anims/default = SubResource( 8 )
[connection signal="body_entered" from="DetectorFueraZona/DetectorIzquierda" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/DetectorDerecha" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/DetectorSuperior" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="DetectorFueraZona/DetectorInferior" to="." method="_on_detector_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
